@@ -114,7 +114,11 @@ HGLOBAL createGlobalData(const KURL& url, const String& title)
 
     if (cbData) {
         PWSTR buffer = (PWSTR)::GlobalLock(cbData);
-        swprintf_s(buffer, size, L"%s\n%s", mutableURL.charactersWithNullTermination(), mutableTitle.charactersWithNullTermination());
+        OwnArrayPtr<const UChar> nullTerminatedURL;
+        mutableURL.copyWithNullTermination(nullTerminatedURL);
+        OwnArrayPtr<const UChar> nullTerminatedTitle;
+        mutableTitle.copyWithNullTermination(nullTerminatedTitle);
+        swprintf_s(buffer, size, L"%s\n%s", nullTerminatedURL.get(), nullTerminatedTitle.get());
         ::GlobalUnlock(cbData);
     }
     return cbData;
